--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/Levankhoa150102/NodeJS_Basic#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.17.3",
     "mssql": "^10.0.1",
     "node-sass": "^9.0.0",
     "nodemon": "^3.0.1"
